<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android App</string>
    <string name="action_settings">Settings</string>
    <string name="action_webview">WebView</string>
    <string name="action_search">Search</string>
    <string name="action_login">Login</string>
    <string name="action_plusbase">PlusBase</string>
    <string name="action_button">Button</string>

    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>

    <string name="title_activity_main">Home</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_web_view_with_video">WebViewWithVideo</string>
    <string name="title_activity_button">ButtonActivity</string>

</resources>
