<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:androidapp="http://schemas.android.com/apk/res-auto"
    tools:context=".Home" >
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        androidapp:showAsAction="ifRoom"
        />
    <item android:id="@+id/action_webview"
        android:title="@string/action_webview"
        android:orderInCategory="100"
        androidapp:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        androidapp:showAsAction="never" />
    <item android:id="@+id/action_login"
        android:title="@string/action_login"
        android:orderInCategory="100"
        androidapp:showAsAction="never" />
    <item android:id="@+id/action_plusbase"
        android:title="@string/action_plusbase"
        android:orderInCategory="100"
        androidapp:showAsAction="never" />
    <item android:id="@+id/action_button"
        android:title="@string/action_button"
        android:orderInCategory="100"
        androidapp:showAsAction="never" />
</menu>
